proyecto1/src/objects/Retail_audit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail audits</relationshipLabel>
        <relationshipName>Retail_audits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_relative_position__c</fullName>
        <label>Actual relative position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DUE__c</fullName>
        <label>Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Presence_flags__c</fullName>
        <label>Presence flags</label>
        <summaryFilterItems>
            <field>Audit_products__c.Presence__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Audit_products__c.Retail_audit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Very high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_relative_position__c</fullName>
        <label>Target relative position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>porcentaje_de_venta__c</fullName>
        <label>porcentaje de venta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Retail audit</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Retail audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>